--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 Hello World!
-<img src="catty101">
-<p>Hello world, my name is Jovaughni</p> 
-<h2>Section 1</h2>
+<img src="cat.jpg" width="500px" height=400px">
+<p>Hello world, my name is Jowan</p> 
+<h2>About Me</h2>
+<!-- I'm a smart and <a href="https://www.omlet.co.uk/guide/cats/choosing_the_right_cat_for_you/7_most_intelligent_cat_breeds/">intelligent</a> cat that's on the team with the 7 most intelligent cat breeds -->
 <h3> Section 1.1</h3>
-<p>Hello world, my name is Jovaughni</p>
+<p>Here are some nice tings about me</p>
 <ul>
-    <li>First item</li>
-    <li>Second item</li>
-    <li>Third item</li>
+    <li>I have clean paws</li>
+    <li>I love to climb trees</li>
+    <li>Milk is my favourite drink</li>
 </ul>
-<h3>Section 1.2</h3>
-<p>Here's is a numbered list</p>
+<h3>Things I must do every day</h3>
+<p>Hygiene routine</p>
 <ol>
-    <li>First item</li>
-    <li>Second item</li>
-    <li>Third item</li>
+    <li>Brush my claws</li>
+    <li>Bathe</li>
+    <li>Clean my teeth</li>
 </ol>
+<p>If you want to know more about me and what makes me happy, just click "<a href="file:///C:/Users/18763/Documents/Next%20page.html">Happy"</a></p>
