--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@ Hello World!
     <li>Bathe</li>
     <li>Clean my teeth</li>
 </ol>
-<p>If you want to know more about me and what makes me happy, just click "<a href="file:///C:/Users/18763/Documents/Next%20page.html">Happy"</a></p>
+<p>If you want to know more about me and what makes me happy, just click "<a href="/Next page.html">Happy"</a></p>
