--- a/Next page.html
+++ b/Next page.html
@@ -6,4 +6,4 @@ What makes me happy!
     <li>Back Scrathes</li>
     <li>Head rubs</li>
 </ul>
-<p>If there is any need for personal information about me just click "<a href="file:///C:/Users/18763/Documents/Next%20page%202.html">Here</a>"</p>
+<p>If there is any need for personal information about me just click "<a href="/Next page 2.html">Here</a>"</p>
